# bitchat

./: .gitignore  LICENSE  Makefile  README.md  public.pem  pyproject.toml
bitchat/: init.py
bitchat/book/: book.py  message.py
bitchat/errors/: singleBookInstanceViolation.py  single_instance_violation.py
bitchat/interfaces/: book.py  message.py  network.py  node.py
bitchat/network/: data_structures.py  default_addresses.py  network.py  node.py
bitchat/utils/: decryptor.py  encryptor.py  key_generator.py  sign.py
scripts/: install_hooks.sh
tests/book/: test_book.py  test_message.py
tests/network/: test_network.py  test_node.py
tests/utils/: test_decryptor.py  test_encryptor.py  test_key_generator.py  test_sign.py
