[tool.poetry]
name = "bitchat"
version = "0.1.0"
description = ""
authors = ["Nahum Maurice <nahum.maurice.nm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rsa = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
blue = "*"
flake8 = "*"
flake8-debugger = "*"
flake8-pytest-style = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pyupgrade = "*"
bandit = "*"
pip-audit = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.blue]
line-length = 79

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
